# hex

./: CMakeLists.txt  CMakePresets.json  README.md
benchmark/: CMakeLists.txt  performance.cpp
cmake/preset/: base.json  linux.json  macos.json  windows.json
include/: hex.hpp
test/: CMakeLists.txt  validate.cpp  validate_doctest.cpp
